Update4 _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ source-code: https://github.com/CollectionBuilder/collectionbuilder-gh
 # SITE SETTINGS
 #
 # title of site appears in banner
-title: Obras de artistas colombianas en el siglo XX
+title: OBRAS DE ARTISTAS COLOMBIANAS EN EL SIGLO XX
 # tagline, a short phrase that will appear throughout the site in the top banner
 tagline: Obras muejeres artistas de Colombia
 # description appears in meta tags and other locations
