--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ source-code: https://github.com/CollectionBuilder/collectionbuilder-gh
 # title of site appears in banner
 title: OBRAS DE ARTISTAS COLOMBIANAS EN EL SIGLO XX
 # tagline, a short phrase that will appear throughout the site in the top banner
-tagline: Obras mujeres artistas de Colombia
+tagline: Obras de mujeres artistas de Colombia
 # description appears in meta tags and other locations
 # this description might appear in search result lists, keep around 160 characters max
 description: "Esta colección contiene las obras de algunas reconocidas e importantes artistas mujeres de Colombia en el siglo XX"
